--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,18 +2,34 @@ body {
     background-color: darkslategray;
 }
 
-.navbar::before{
+.navbar::before {
     content: " ";
     display: table;
 }
 
-.navbar::after{
+.navbar::after {
     content: " ";
     display: table;
 }
 
-.nav-entry {
-    color: white;
+.nav-menu li {
+    float: left;
+}
+
+.nav-menu li a {
+    color: white !important;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.nav-menu li a:hover {
+    background-color: #111111;
+}
+
+.nav-menu {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    list-style: none;
 }
 
 .pull-right {
@@ -21,4 +37,8 @@ body {
 }
 .pull-left {
     float: left !important;
+}
+
+*, ::before, ::after{
+    box-sizing: border-box;
 }
