--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .navbar {
-    background-color: #454545
+    background-color: #454545;
 }
 
 .nav-menu li {
@@ -34,6 +34,51 @@ body {
     padding: 0;
     list-style-type: none;
     list-style: none;
+}
+
+#banner {
+    background: linear-gradient(red, blue)
+}
+
+#banner .container {
+    display: flex;
+    padding: 0;
+}
+
+#logo {
+    flex: 1;
+    margin: 20px;
+
+    /* justify-content: center; /* moved img towards center */
+    align-items: center;
+    /* display: flex; */
+    /* overflow: hidden; */
+}
+
+#logo img {
+    /* flex-shrink: 0; */
+    /* width: auto; */
+    min-height: 100%;
+}
+
+#stream-status {
+    text-align: right;
+    border-radius: 3px;
+    background: #656565;
+    display: flex;
+    margin: 20px;
+    padding: 10px;
+}
+
+#stream-status-info {
+    padding-right: 10px;
+}
+
+img.stream-preview {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: 200px; 
 }
 
 .pull-right {
