--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,9 +15,6 @@ body {
 }
 
 /* navbar css */
-/* nav .navbar-nav li a{
-    color: white !important;
-} */
 nav .navbar-nav li a:hover{
     background-color: white;
     color: black !important;
@@ -52,11 +49,7 @@ nav .navbar-nav li a:hover{
     text-align: right;
     color: white;
 }
-#stream-status img {
-    display: inline-block;
-    width: 100px;
-}
 
 #content {
-    background: green;
+    background: linear-gradient(#111111, #222222);
 }
