--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
     max-width: 1080px;
     min-width: 480px;
     margin: auto;
-    background-image: url("https://i.imgur.com/N2e34HA.png");
+    background-image: url("https://i.imgur.com/qllsRNI.png");
 }
 
 /* general utility classes */
