--- a/wizsite/templates/temp_index.html
+++ b/wizsite/templates/temp_index.html
@@ -1,7 +1,8 @@
-<body>
-    <div id="reactEntry">
-        loading
-    </div>
-    <!-- Load JS -->
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
-</body>
+{% extends "header.html" %}
+{% block content %}
+<div id="reactEntry">
+    loading
+</div>
+<!-- Load JS -->
+<script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
+{% endblock %}
